fix bug 262815 - Closing tab while bookmarks view is shown can lead to crash [@ objc_msgSend]. sr=pinkerton